# flask-restful-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitlab-ci.yml  Dockerfile  Makefile  application.py  boot-multistage.sh  config.py  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: flask.yml
{{cookiecutter.project_slug}}/apps/: __init__.py  api.py  cache.py  cached.py  decorators.py  jwt.py
{{cookiecutter.project_slug}}/apps/auth/: __init__.py  resources.py  schemas.py
{{cookiecutter.project_slug}}/apps/core/: resources.py
{{cookiecutter.project_slug}}/apps/users/: models.py  repositories.py  schemas.py
{{cookiecutter.project_slug}}/requirements/: base.txt  test.txt
{{cookiecutter.project_slug}}/tests/: conftest.py
