[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.email }}"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
python-dotenv = "^0.12.0"
marshmallow = "^3.5.1"
bcrypt = "^3.1.7"
Flask-JWT-Extended = "^3.24.1"
Flask-Cors = "^3.0.8"
python-slugify = "^4.0.0"
Flask-Caching = "^1.8.0"
redis = "^3.4.1"
webargs = "^6.0.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
flask-shell-ipython = "^0.4.1"
isort = "^4.3.21"
black = "^19.10b0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-flask = "^1.0.0"
pytest-runner = "^5.2"
Faker = "^4.0.2"
coverage = "^5.0.4"
coverage-badge = "^1.0.1"
Fabric = "^2.5.0"
snapshottest = "^0.5.1"
factory_boy = "^2.12.0"
mongomock = "^3.19.0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
